# ComfyUI-React-Extension-Template

./: .dockerignore  .env.example  .gitignore  README-DEVELOPMENT.md  README.md  __init__.py  __init__.py.bak  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: react-build.yml
locales/en/: main.json
locales/zh/: main.json
ui/: .prettierrc  eslint.config.js  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main-standalone.tsx  main.tsx  setupTests.ts  vite-env.d.ts
ui/src/__tests__/: dummy.test.tsx
ui/src/mocks/: comfyui-mock.js
ui/src/utils/: i18n.ts
