[project]
name = "comfyui_example_frontend_extension"
description = "A minimal example of integrating a React application with TypeScript as a ComfyUI extension, featuring interactive workflow monitoring and visualization."
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/yourusername/ComfyUI_example_frontend_extension"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "your_publisher_id" # Change this to your actual publisher ID
DisplayName = "ComfyUI React Extension Example"
Icon = ""